Imported images and icons to images folder, and on index.html added icons to the nav bar

--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <!-- All icons downloaded from https://fontawesome.com/ and is located in /images/icons folder-->
     <div class="page">
+        <!-- Page laid out using 4 div tags to seperate the page into 4 columns -->
         <div class="firstSection">
             <div class="nav">
-
+                <ul>
+                    <li><a href="#"><img src="images/icons/wrench-solid.svg" alt="settings"></a></li>
+                    <li><a href="#"><img src="images/icons/code-solid.svg" alt="gists"></a></li>
+                    <li><a href="#"><img src="images/icons/stack-overflow-brands.svg" alt="stack overflow"></a></li>
+                    <li><a href="#"><img src="images/icons/chart-line-solid.svg" alt="trending"></a></li>
+                    <li><a href="#"><img src="images/icons/pencil-alt-solid.svg" alt="scratch pad"></a></li>
+                    <li><a href="#"><img src="images/icons/lightbulb-regular.svg" alt="playground"></a></li>
+                    <li><a href="#"><img src="images/icons/question-solid.svg" alt="help/intro"></a></li>
+                </ul>
             </div>
             <div class="socialMedia">
-
+                <a href="#" class="socialMediaIcons"><img src="images/icons/facebook-brands.svg" alt="facebook"></a>
+                <a href="#" class="socialMediaIcons"><img src="images/icons/linkedin-in-brands.svg" alt="linkedin"></a>
+                <a href="#" class="socialMediaIcons"><img src="images/icons/twitter-brands.svg" alt="twitter"></a>
+                <a href="#" class="socialMediaIcons"><img src="images/icons/reddit-brands.svg" alt="reddit"></a>
             </div>
         </div>
         <div class="secondSection">
@@ -42,7 +54,7 @@
 
             </div>
             <div class="github">
-                
+
             </div>
         </div>
     </div>
