--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Initab</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- All icons downloaded from https://fontawesome.com/ and is located in /images/icons folder-->
@@ -13,14 +13,14 @@
         <!-- Page laid out using 4 div tags to seperate the page into 4 columns -->
         <div class="firstSection">
             <div class="nav">
-                <ul>
-                    <li><a href="#"><img src="images/icons/wrench-solid.svg" alt="settings"></a></li>
-                    <li><a href="#"><img src="images/icons/code-solid.svg" alt="gists"></a></li>
-                    <li><a href="#"><img src="images/icons/stack-overflow-brands.svg" alt="stack overflow"></a></li>
-                    <li><a href="#"><img src="images/icons/chart-line-solid.svg" alt="trending"></a></li>
-                    <li><a href="#"><img src="images/icons/pencil-alt-solid.svg" alt="scratch pad"></a></li>
-                    <li><a href="#"><img src="images/icons/lightbulb-regular.svg" alt="playground"></a></li>
-                    <li><a href="#"><img src="images/icons/question-solid.svg" alt="help/intro"></a></li>
+                <ul class="navBar">
+                    <li><a href="#"><img src="images/icons/wrench-solid.svg" alt="settings">settings</a></li>
+                    <li><a href="#"><img src="images/icons/code-solid.svg" alt="gists">gists</a></li>
+                    <li><a href="#"><img src="images/icons/stack-overflow-brands.svg" alt="stack overflow">stack overflow</a></li>
+                    <li><a href="#"><img src="images/icons/chart-line-solid.svg" alt="trending">trending</a></li>
+                    <li><a href="#"><img src="images/icons/pencil-alt-solid.svg" alt="scratch pad">scratch pad</a></li>
+                    <li><a href="#"><img src="images/icons/lightbulb-regular.svg" alt="playground">playground</a></li>
+                    <li><a href="#"><img src="images/icons/question-solid.svg" alt="help/intro">help/intro</a></li>
                 </ul>
             </div>
             <div class="socialMedia">
@@ -32,7 +32,7 @@
         </div>
         <div class="secondSection">
             <div class="title">
-
+                <p><span src=""></span></p>
             </div>
             <div class="redditPosts">
 
@@ -40,7 +40,7 @@
         </div>
         <div class="thirdSection">
             <div class="title">
-
+                <p><i></i></p>
             </div>
             <div class="javaScriptNews">
 
