--- a/index.html
+++ b/index.html
@@ -6,55 +6,125 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Initab</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-    <!-- All icons downloaded from https://fontawesome.com/ and is located in /images/icons folder-->
     <div class="page">
-        <!-- Page laid out using 4 div tags to seperate the page into 4 columns -->
+        <!-- Page laid out using 4 div tags to seperate the page into 4 columns using display grid -->
         <div class="firstSection">
             <div class="nav">
-                <ul class="navBar">
-                    <li><a href="#"><img src="images/icons/wrench-solid.svg" alt="settings">settings</a></li>
-                    <li><a href="#"><img src="images/icons/code-solid.svg" alt="gists">gists</a></li>
-                    <li><a href="#"><img src="images/icons/stack-overflow-brands.svg" alt="stack overflow">stack overflow</a></li>
-                    <li><a href="#"><img src="images/icons/chart-line-solid.svg" alt="trending">trending</a></li>
-                    <li><a href="#"><img src="images/icons/pencil-alt-solid.svg" alt="scratch pad">scratch pad</a></li>
-                    <li><a href="#"><img src="images/icons/lightbulb-regular.svg" alt="playground">playground</a></li>
-                    <li><a href="#"><img src="images/icons/question-solid.svg" alt="help/intro">help/intro</a></li>
-                </ul>
+                <ul>
+                    <li><i class="fas fa-wrench"></i> settings</li>
+                    <li><i class="fas fa-code"></i> gists</li>
+                    <li><i class="fab fa-stack-overflow"></i> stack overflow</li>
+                    <li><i class="fas fa-chart-line"></i> trending</li>
+                    <li><i class="fas fa-pencil-alt"></i> scratch pad</li>
+                    <li><i class="far fa-lightbulb"></i> playground</li>
+                    <li><i class="fas fa-question"></i> help/intro</li>
+                </ul>            
             </div>
             <div class="socialMedia">
-                <a href="#" class="socialMediaIcons"><img src="images/icons/facebook-brands.svg" alt="facebook"></a>
-                <a href="#" class="socialMediaIcons"><img src="images/icons/linkedin-in-brands.svg" alt="linkedin"></a>
-                <a href="#" class="socialMediaIcons"><img src="images/icons/twitter-brands.svg" alt="twitter"></a>
-                <a href="#" class="socialMediaIcons"><img src="images/icons/reddit-brands.svg" alt="reddit"></a>
+                
             </div>
         </div>
         <div class="secondSection">
             <div class="title">
-                <p><span src=""></span></p>
+                <p><i class="fab fa-reddit-alien"></i>POPULAR ON R/JAVASCRIPT</p>
             </div>
-            <div class="redditPosts">
-
+            <div class="reddit">
+                <div class="redditPosts">
+                    <p class="redditText">The revolutionary project management tool is here and it's visual. Satrt Your Free Trial Now.</p>
+                    <p class="redditTrial">Start Free Trial</p>
+                    <p class="redditSponsor">Sponsored by monday</p>
+                </div>
+                <div class="redditPosts">
+                    <p class="redditText">A teacher at my school was sick of remembering all the different bell schedules, so I created an app to make things easier. The whole school loves it.</p>
+                    <p class="redditAuthor">Posted by: u/scheduled_nightmare</p>
+                    <p class="redditScore">Reddit Score: 259</p>
+                    <a href="#">Link to Comments</a></p>
+                </div>
+                <div class="redditPosts">
+                    <p class="redditText">Autoslap - a Node CLI tool that automatically installs and configures ESLint, Prettier, Husky and lint-staged.</p>
+                    <p class="redditAuthor">Posted by: u/paolostyle</p>
+                    <p class="redditScore">Reddot Scpre: 13</p>
+                    <p class="redditComment"><a href="#">Link to Comments</a></p>
+                </div>
+                <div class="redditPosts">
+                    <p class="redditText">What's the most dirty thing you've had to work with in code and how did you solve them?</p>
+                    <p class="redditAuthor">Posted by: u/SleepingAriadne</p>
+                    <p class="redditScore">Reddit Score: 156</p>
+                    <p class="redditComment"><a href="#">Link to Comments</a></p>
+                </div>
             </div>
         </div>
         <div class="thirdSection">
             <div class="title">
-                <p><i></i></p>
+                <p><i class="far fa-clock"></i>REVELANT JAVASCRIPT HISTORY</p>
             </div>
-            <div class="javaScriptNews">
-
+            <div class="javaScriptHistory">
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi.</p>
+                </div>
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                </div>
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                </div>
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                </div>
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                </div>
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                </div>
+                <div class="javaScriptHistoryItems">
+                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                </div>
             </div>
-            <div class="timeDate">
-
+            <!-- Displaying current date and time using JS -->
+            <div class="currentTime"></div>
+            <div class="currentTime" onload="currentTime()"></div>
+            <div class="currentDate" onload="currentDate()"></div>
+            <div class="msgDelete"> <!-- Creating a deletable message at the bottom of the page-->
+                <p class="deleteText"><i class="fas fa-question-circle"></i>Did you know you can add CUSTOM LINKS to display in this section?</br>
+                Open the SETTINGS panel and add the URLs of your favorite sites to the 'CUSTOM LINKS' textarea.</p>
+                <p class="deleteMe"><i class="fas fa-times-circle"></i>Got it! Don't show me this again.</p>
             </div>
         </div>
         <div class="fourthSection">
             <div class="title">
-
+                <p><i class="fab fa-github-alt"></i>GITHUB ISSUES HISTORY</p>
+                <p class="subTitle">switch to gitlab</p>
             </div>
-            <div class="github">
-
+            <div class="navGithub">
+                <p>ISSUES</p>
+                <p>PULL REQUESTS</p>
+            </div>
+            <div class="githubFeed">
+                <div class="feedItems">
+                    <p>Repo: GoogleChrome/puppeteer</p>
+                    <p>Issue #1341</p>
+                    <p>How to get the inner text of elements from the return values of page.$$</p>
+                </div>
+                <div class="feedItems">
+                    <p>Repo: GoogleChrome/puppeteer</p>
+                    <p>Issue #3051</p>
+                    <p>How to get text from a element?</p>
+                </div>
+                <div class="feedItems">
+                    <p>Repo: apollographql/graphql-tag</p>
+                    <p>Issue #131</p>
+                    <p>Parse variables</p>
+                </div>
+                <div class="feedItems">
+                    <p>Repo: apollographql/apollo-client</p>
+                    <p>Issue #3967</p>
+                    <p>It is not possible to pass Authorization header to Websocket.</p>
+                </div>
             </div>
         </div>
     </div>
