Almost completed CSS for nav and some other global CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="page">
@@ -20,17 +21,20 @@
                     <li><i class="fab fa-stack-overflow"></i> stack overflow</li>
                     <li><i class="fas fa-chart-line"></i> trending</li>
                     <li><i class="fas fa-pencil-alt"></i> scratch pad</li>
-                    <li><i class="far fa-lightbulb"></i> playground</li>
+                    <li><i class="far fa-lightbulb"></i> playground<i class="fas fa-lock" style="color:#DDDDDD;"></i></li>
                     <li><i class="fas fa-question"></i> help/intro</li>
                 </ul>            
             </div>
-            <div class="socialMedia">
-                
+            <div class="social">
+                <a href="#" class="socialMedia"><i class="fab fa-facebook-f"></i></i></a>
+                <a href="#" class="socialMedia"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="socialMedia"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="socialMedia"><i class="fab fa-reddit-alien"></i></a>
             </div>
         </div>
         <div class="secondSection">
             <div class="title">
-                <p><i class="fab fa-reddit-alien"></i>POPULAR ON R/JAVASCRIPT</p>
+                <p><i class="fab fa-reddit-alien fa-reddit-two"></i> POPULAR ON R/JAVASCRIPT</p>
             </div>
             <div class="reddit">
                 <div class="redditPosts">
@@ -60,7 +64,7 @@
         </div>
         <div class="thirdSection">
             <div class="title">
-                <p><i class="far fa-clock"></i>REVELANT JAVASCRIPT HISTORY</p>
+                <p><i class="far fa-clock"></i> REVELANT JAVASCRIPT HISTORY</p>
             </div>
             <div class="javaScriptHistory">
                 <div class="javaScriptHistoryItems">
@@ -97,7 +101,7 @@
         </div>
         <div class="fourthSection">
             <div class="title">
-                <p><i class="fab fa-github-alt"></i>GITHUB ISSUES HISTORY</p>
+                <p><i class="fab fa-github-alt"></i> GITHUB ISSUES HISTORY</p>
                 <p class="subTitle">switch to gitlab</p>
             </div>
             <div class="navGithub">
@@ -128,7 +132,6 @@
             </div>
         </div>
     </div>
-
     <script src="js/script.js"></script>
 </body>
 </html>
