Finished landing page clone with all CSS completed

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
                 </div>
                 <div class="redditPosts">
                     <p class="redditText">A teacher at my school was sick of remembering all the different bell schedules, so I created an app to make things easier. The whole school loves it.</p>
-                    <p class="redditAuthor">Posted by: u/scheduled_nightmare</p>
+                    <p class="redditAuthor">Posted by: <span class="redditUser">u/scheduled_nightmare</span></p>
                     <p class="redditScore">Reddit Score: 259</p>
-                    <a href="#">Link to Comments</a></p>
+                    <p class="redditComment"><a href="#">Link to Comments</a></p>
                 </div>
                 <div class="redditPosts">
                     <p class="redditText">Autoslap - a Node CLI tool that automatically installs and configures ESLint, Prettier, Husky and lint-staged.</p>
-                    <p class="redditAuthor">Posted by: u/paolostyle</p>
-                    <p class="redditScore">Reddot Scpre: 13</p>
+                    <p class="redditAuthor">Posted by: <span class="redditUser">u/paolostyle</span></p>
+                    <p class="redditScore">Reddit Score: 13</p>
                     <p class="redditComment"><a href="#">Link to Comments</a></p>
                 </div>
                 <div class="redditPosts">
                     <p class="redditText">What's the most dirty thing you've had to work with in code and how did you solve them?</p>
-                    <p class="redditAuthor">Posted by: u/SleepingAriadne</p>
+                    <p class="redditAuthor">Posted by: <span class="redditUser">u/SleepingAriadne</span></p>
                     <p class="redditScore">Reddit Score: 156</p>
                     <p class="redditComment"><a href="#">Link to Comments</a></p>
                 </div>
@@ -68,29 +68,31 @@
             </div>
             <div class="javaScriptHistory">
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi.</p>
+                    <p class="newsItems"><i class="fab fa-artstation"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi.</p>
                 </div>
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                    <p class="newsItems"><i class="fas fa-bug"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
                 </div>
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                    <p class="newsItems"><i class="fab fa-artstation"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
                 </div>
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                    <p class="newsItems"><i class="fas fa-bug"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
                 </div>
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                    <p class="newsItems"><i class="fab fa-artstation"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
                 </div>
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                    <p class="newsItems"><i class="fas fa-bug"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
                 </div>
                 <div class="javaScriptHistoryItems">
-                    <p class="newsItems">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
+                    <p class="newsItems"><i class="fab fa-artstation"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, dolore.</p>
                 </div>
             </div>
             <!-- Displaying current date and time using JS -->
-            <div class="currentTime"></div>
+            <div class="currentTime">
+                <i class="amPm">1</i>
+            </div>
             <div class="currentTime" onload="currentTime()"></div>
             <div class="currentDate" onload="currentDate()"></div>
             <div class="msgDelete"> <!-- Creating a deletable message at the bottom of the page-->
@@ -105,29 +107,30 @@
                 <p class="subTitle">switch to gitlab</p>
             </div>
             <div class="navGithub">
-                <p>ISSUES</p>
-                <p>PULL REQUESTS</p>
+                <p class="navIssue">ISSUES</p>
+                <span class="triangle"></span>
+                <p class="navPull">PULL REQUESTS</p>
             </div>
             <div class="githubFeed">
                 <div class="feedItems">
-                    <p>Repo: GoogleChrome/puppeteer</p>
-                    <p>Issue #1341</p>
-                    <p>How to get the inner text of elements from the return values of page.$$</p>
+                    <p class="repo">Repo: GoogleChrome/puppeteer</p>
+                    <p class="issue">Issue #1341</p>
+                    <p class="message">How to get the inner text of elements from the return values of page.$$</p>
                 </div>
                 <div class="feedItems">
-                    <p>Repo: GoogleChrome/puppeteer</p>
-                    <p>Issue #3051</p>
-                    <p>How to get text from a element?</p>
+                    <p class="repo">Repo: GoogleChrome/puppeteer</p>
+                    <p class="issue">Issue #3051</p>
+                    <p class="message">How to get text from a element?</p>
                 </div>
                 <div class="feedItems">
-                    <p>Repo: apollographql/graphql-tag</p>
-                    <p>Issue #131</p>
-                    <p>Parse variables</p>
+                    <p class="repo">Repo: apollographql/graphql-tag</p>
+                    <p class="issue">Issue #131</p>
+                    <p class="message">Parse variables</p>
                 </div>
                 <div class="feedItems">
-                    <p>Repo: apollographql/apollo-client</p>
-                    <p>Issue #3967</p>
-                    <p>It is not possible to pass Authorization header to Websocket.</p>
+                    <p class="repo">Repo: apollographql/apollo-client</p>
+                    <p class="issue">Issue #3967</p>
+                    <p class="message">It is not possible to pass Authorization header to Websocket.</p>
                 </div>
             </div>
         </div>
