added social media links

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </ul>            
             </div>
             <div class="social">
-                <a href="#" class="socialMedia"><i class="fab fa-facebook-f"></i></i></a>
-                <a href="#" class="socialMedia"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#" class="socialMedia"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="socialMedia"><i class="fab fa-reddit-alien"></i></a>
+                <a href="https://github.com/jenesh" class="socialMedia"><i class="fab fa-facebook-f"></i></i></a>
+                <a href="https://www.linkedin.com/in/jeneshnapit/" class="socialMedia"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://twitter.com/NapitJenesh" class="socialMedia"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.youtube.com/channel/UCYsCULnk24G4x9QkmMoN0TQ" class="socialMedia"><i class="fab fa-reddit-alien"></i></a>
             </div>
         </div>
         <div class="secondSection">
